# id3d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
chaine/: CMakeLists.txt  README.md
chaine/data/: alien_battleship.off
chaine/src/: all.hpp  dependencies.hpp  generic_index.hpp  main.cpp  main2d.cpp  main3d.cpp
chaine/src/application/2d/: application.hpp  circumcenter.hpp  contains.hpp  find_border_triangle.hpp  insert.hpp  is_delaunay.hpp  lawson.hpp  main.cpp  paraboloid.hpp  render_ui.hpp  settings.hpp  walk_toward.hpp
chaine/src/application/3d/: laplacian.hpp  main.cpp  simplify.hpp
chaine/src/data/: all.hpp  edge_program.hpp  mean_curvature_program.hpp  smooth_normal_program.hpp  triangle_program.hpp  vertex_program.hpp
chaine/src/face_vertex/: all.hpp  geometry.hpp  triangles.hpp
chaine/src/face_vertex/index/: triangle_edge.hpp  vertex_edge.hpp
chaine/src/face_vertex/mesh/: all.hpp  any_ghost_vertex.hpp  create_triangle.hpp  create_vertex.hpp  insert_vertex.hpp  mesh.hpp  random_triangle_edge.hpp  split.hpp  triangle.hpp  triangles.hpp  vertex_count.hpp  vertices.hpp
chaine/src/face_vertex/proxy/: all.hpp
chaine/src/face_vertex/topology/: all.hpp  mesh.hpp  triangle.hpp  vertex.hpp
chaine/src/face_vertex_mesh/: all.hpp  face_vertex_mesh.hpp
chaine/src/face_vertex_mesh/edge/: index.hpp
chaine/src/face_vertex_mesh/index/: all.hpp  triangle_edge.hpp
chaine/src/face_vertex_mesh/mesh/: mesh.hpp  topology.hpp  triangles.hpp  vertices.hpp
chaine/src/face_vertex_mesh/proxy/: all.hpp
chaine/src/face_vertex_mesh/topology/: mesh.hpp  triangle.hpp  vertex.hpp
chaine/src/face_vertex_mesh/triangle/: index.hpp  is_ghost.hpp  proxy.hpp  topology.hpp
chaine/src/face_vertex_mesh/triangle_edge/: adjacent_triangle.hpp  flip.hpp  index.hpp  proxy.hpp
chaine/src/face_vertex_mesh/vertex/: any_adjacent_triangle.hpp  index.hpp  is_ghost.hpp  proxy.hpp  topology.hpp
chaine/src/mesh/: all.hpp
chaine/src/mesh/index/: all.hpp  triangle.hpp  triangle_vertex_edge.hpp  vertex.hpp
chaine/src/mesh/mesh/: all.hpp  create_triangle.hpp  create_vertex.hpp  (+12 more)
chaine/src/mesh_conversion/: all.hpp  triangle_to_face_vertex.hpp
chaine/src/predicate/: all.hpp  orientation.hpp
chaine/src/shader/: edge.vs  triangle.fs  vertex.vs
chaine/src/triangle_mesh/: all.hpp  edge_index.hpp  engine.hpp  geometry.hpp  mesh.hpp  topology.hpp  triangle_index.hpp  triangle_proxy.hpp  triangle_topology.hpp  vertex_index.hpp  vertex_proxy.hpp
common/: CMakeLists.txt
galin/: CMakeLists.txt  readme.md
galin/data/teaset/: README.md
galin/src/: codegen.cpp  main.cpp
galin/src/data/: flat_shading_program.hpp  wireframe_program.hpp
galin/src/modelling/: all.hpp  attenuation.hpp
galin/src/nurbs/: all.hpp  nurbs.hpp
galin/src/scene/: kame_house.hpp
galin/src/shader/: blob.glsl  kame_house copy.glsl  kame_house.glsl  kame_house_gen.glsl  main.glsl  shadertoy_prefix.fs
galin/src/shadertoy/: codegen.cpp  main.cpp
galin/src/terrain/: all.hpp  drainage_functions.hpp  drainage_system.hpp  terrain.hpp
galin/src/tree/: all.hpp  glsl_expression.hpp  node.hpp  object.hpp
galin/src/tree2/: all.hpp  object.hpp
galin/src/tree3/: all.hpp
galin_2/: CMakeLists.txt
galin_2/src/: control_mesh.hpp  object.hpp  patch.hpp
galin_2/src/data/: all.hpp  flat_shading_program.hpp  wireframe_program.hpp
galin_2/src/modelling/: all.hpp  barr.hpp  control_mesh.hpp  nurbs.hpp
galin_2/src/nurbs/: nurbs.hpp
iehl/: CMakeLists.txt  README.md
iehl/src/: debug.cpp  main.cpp  opengl.hpp  transformed.hpp  transformed_bounds.hpp
iehl/src/_gizmo_d/: gizmo.hpp  line_segment.vs
iehl/src/application/: settings.hpp
iehl/src/bvh/: all.hpp  bvh.hpp  traverse.hpp
iehl/src/command/: all.hpp  command_group.hpp  copy_cpu_to_gpu.hpp  copy_gpu_to_cpu.hpp
iehl/src/data/: all.hpp  forward_ambient_render_pass.hpp  forward_blinn_phong_pass.hpp  uniform_texture.hpp
iehl/src/forward_rendering/: all.hpp  bind.hpp  depth.frag  depth.vert  forward_renderer.hpp  shader.frag  shader.vert  upload.hpp  vertex_array.hpp
iehl/src/frustum_culler/: all.hpp  bind.hpp  cull.comp  frustum_culler.hpp
iehl/src/frustum_culling/: all.hpp  culler.hpp  initialize.hpp  is_culling.hpp
iehl/src/gizmo/: all.hpp  gizmo.hpp  line_segment.fs  line_segment.vs
iehl/src/gizmo_d/: line_segment.fs
iehl/src/grid/: all.hpp  grid.hpp  index_buffer.hpp  lights.hpp
iehl/src/hdr_framebuffer/: all.hpp  bind.hpp  hdr_framebuffer.hpp
iehl/src/light/: all.hpp
iehl/src/light_grid/: all.hpp
iehl/src/lighting/: all.hpp  light.hpp  light_culling.hpp  light_group.hpp
iehl/src/material/: all.hpp  material_group.hpp  material_properties.hpp
iehl/src/object/: all.hpp  grid_subdivision.hpp  object_group.hpp  object_group_data.hpp  object_group_topology.hpp  triangle_area.hpp  triangle_centroid.hpp
iehl/src/occlusion_culling/: all.hpp  bind.hpp  cull.comp  draw.frag  draw.vert  generate_mipmap.hpp  mipmap.comp  occlusion_culler.hpp
iehl/src/opengl/: all.hpp  draw_elements_parameters.hpp
iehl/src/random/: all.hpp  triangle_barycentric_coordinates.hpp
iehl/src/ray/: all.hpp  intersection.hpp  ray_trace.hpp  ray_tracer.hpp  scene.hpp
iehl/src/ray_tracer/: all.hpp  bind.hpp  draw.frag  draw.vert  ray.hpp  ray_tracer.hpp  trace.hpp
iehl/src/scene/: all.hpp  bounding_box.hpp  centroid.hpp  initialize_gpu.hpp  render.hpp  scene.hpp  update_bounding_box.hpp  update_bounds.hpp  update_lights.hpp  wavefront.hpp
iehl/src/shader/: _wireframe.vert  all.hpp  wireframe.frag
iehl/src/solid_renderer/: all.hpp  draw.frag  draw.vert  solid_renderer.hpp  vertex_array.hpp
iehl/src/tone_mapping/: all.hpp  bind.hpp  draw.hpp  shader.frag  shader.vert  tone_mapper.hpp
iehl/src/vertex_attribute/: all.hpp  vertex_attribute_group.hpp
iehl/src/wireframe_renderer/: all.hpp  shader.frag  shader.vert  wireframe_renderer.hpp
iehl/src/z_prepasser/: all.hpp  bind.hpp  draw.frag  draw.vert  z_prepasser.hpp
lib/stb/: CMakeLists.txt  stb_image_resize.c
lib/tinyobjloader/: CMakeLists.txt
libs/dear_imgui/: CMakeLists.txt
(+599 files in other folders)
