add_library(id3d_galin_2_common INTERFACE)
target_include_directories(id3d_galin_2_common INTERFACE src)
target_link_libraries(id3d_galin_2_common INTERFACE id3d_common)

# add_executable(id3d_galin_2_revolution src/application/revolution/main.cpp)
# target_link_libraries(id3d_galin_2_revolution PRIVATE id3d_galin_2_common)

add_executable(id3d_galin_2_teaset src/application/teaset/main.cpp)
target_link_libraries(id3d_galin_2_teaset PRIVATE id3d_galin_2_common)
